fix(): 解决message附带的个人信息固定问题